[tool.poetry]
name = "jinjiroumubot"
version = "0.1.0"
description = ""
authors = ["Norifusa Tachiyanagi <wonderfulboyx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.194"
openai = "^0.27.8"
duckduckgo-search = "^3.8.1"
pypdf = "^3.9.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.1"
ipywidgets = "^8.0.6"
jupyter = "^1.0.0"
notebook = "^6.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
